--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-validator": "^6.12.1",
     "mysql2": "^2.3.0",
     "pug": "^3.0.2",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "shortid": "^2.2.16",
+    "slug": "^5.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
