--- a/package.json
+++ b/package.json
@@ -4,20 +4,30 @@
   "description": "Proyecto UpTask con Node y MVC",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./index.js"
+    "start": "concurrently \"npm run dev\" \"npm run watch\"",
+    "dev": "nodemon ./index.js",
+    "watch": "webpack -w --mode development"
   },
   "author": "Jorney Lopez",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
+    "concurrently": "^6.2.1",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "mysql2": "^2.3.0",
     "pug": "^3.0.2",
     "sequelize": "^6.6.5",
     "shortid": "^2.2.16",
-    "slug": "^5.1.0"
+    "slug": "^5.1.0",
+    "sweetalert2": "^11.1.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "babel-loader": "^8.2.2",
+    "nodemon": "^2.0.12",
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.8.0"
   }
 }
