--- a/variables.env
+++ b/variables.env
@@ -1,7 +1,8 @@
 BD_NOMBRE=uptasknode
 BD_USER=root
-BD_PASS=root
-BD_HOST=localhost
+BD_PASS=root1234
+BD_HOST=uptasknodeaws.cd9p0qfdqghk.us-east-1.rds.amazonaws.com
 BD_PORT=3306
 
 HOST=localhost
+PORT=3000
