--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^6.2.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
